dig / microsite -- fixed Tour Israel link wrapping problem

--- a/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_style.css
+++ b/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_style.css
@@ -770,6 +770,9 @@ you can use the generic selector below, but it's slower:
   margin-bottom: 15px;
   outline: none;
 }
+.page-node-microsite #left-nav #left-nav-links ul ul a {
+  line-height: 1.2em;
+}
 .page-node-microsite #left-nav #left-nav-links li.active a {
   color: #e5ce96;
 }
